--- a/style.css
+++ b/style.css
@@ -1,47 +1,70 @@
-/* VVariables */
 :root {
-    --green-color: #3cd815;
-    --gray-color: #4a4a48;
-    --light-green-color: #c0eb7b;
-    --orange-color: ;
-    --light-orange-color: #ff7e00;
-    --text-color: #1a2428;
-    --home-text-color: #fff;
-    --bg-color: #fff;
     --bg-header-color: #e4e2dd;
+    --text-color: #1a2428;
+    --gray-color: #4a4a48;
+    --bg-color: #fff;
+    --swiper-text-color: #fff;
 }
 
-section {
-    padding: 4.5rem 0 1.5rem;
-}
-
-body {
-    color: var(--text-color);
-}
 header {
-    position: fixed;
     width: 100%;
-    top: 0;
-    right: 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    position: fixed;
     background-color: var(--bg-header-color);
-    box-shadow: 0 8px 11px rgb(14 55 54 / 40%);
-    padding: 0px 100px;
-    transition: 0.5s;
     z-index: 10001;
 }
 
-.logo {
-    width: 250px;
+body {
+    margin: 0;
+    padding: 0;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
-.logo img {
+.navbar-brand img {
+    width: 230px;
+}
+
+.header-nav {
+    background-color: var(--bg-header-color) !important;
+    padding: 0;
+    box-shadow: 0 8px 11px rgb(14 55 54 / 40%);
+}
+
+.container-fluid {
+    padding: 0 60px;
+}
+
+.navbar-nav {
+    display: flex;
     width: 100%;
-    margin-left: 150px;
+    top: 0;
+    right: 0;
+    align-items: center;
+    justify-content: center;
+    transition: 0.5s;
+    column-gap: 0.5rem !important;
+    gap: 20px !important;
+}
+
+.nav-link {
+    text-transform: uppercase;
+    font-family: "Times New Roman", Times, serif;
+    font-size: 1rem;
+    font-weight: 500;
+    color: var(--text-color);
+    padding: 0.5rem 1rem !important;
+    text-decoration: none;
+    border-radius: 5rem;
+}
+
+.nav-link:hover,
+.nav-link.active {
+    border-radius: 5rem;
+    background-color: var(--gray-color);
+    color: var(--bg-color) !important;
+
+    transition: background 0.5s;
 }
 
 .profile {
@@ -59,46 +82,26 @@ header {
 }
 
 .profile span {
+    font-family: "Times New Roman", Times, serif;
     font-size: 15px;
     font-weight: 500;
 }
 
-.navbar ul {
-    list-style: none;
-    display: flex;
-    column-gap: 0.5rem;
+/* ================= Home swiper ================== */
+.swiper {
+    margin-top: 100px;
+    width: 95%; /* Thu nhỏ lại */
+    height: 520px;
 }
 
-.navbar ul a {
-    font-size: 1rem;
-    font-weight: 500;
-    color: var(--text-color);
-    padding: 0.5rem 1rem;
-    text-decoration: none;
-}
-
-.navbar a:hover,
-.navbar .home-active {
-    background-color: var(--gray-color);
-    color: var(--bg-color);
-    border-radius: 5rem;
-    transition: background 0.5s;
-}
-
-#menu-icon {
-    font-size: 24px;
-    cursor: pointer;
-    z-index: 10001;
-    display: none;
-}
-
-.container {
+.slide-container {
     position: relative;
     width: 100%;
-    min-height: 640px;
+    min-height: 520px;
     display: flex !important;
-    align-items: center;
-    justify-content: center;
+    align-items: center !important;
+    justify-content: space-between !important;
+    padding: 130px;
 
     background: url(img/background.jpg);
     background-repeat: no-repeat;
@@ -107,31 +110,34 @@ header {
     overflow: hidden;
 }
 
-.container img {
-    height: 500px;
+.slide-container img {
+    height: 400px;
     max-width: 100%;
     object-fit: cover;
-    border-radius: 10%;
-    /* position: absolute; */
+    border-radius: 5%;
 }
 
-.container h1 {
-    font-size: 40px;
-}
-
-.home-text {
-    color: var(--home-text-color);
-    max-width: 300px;
-    padding: 0 150px;
+.home-text,
+.home-text a {
+    font-family: "Times New Roman", Times, serif;
+    padding-right: 50px;
+    color: var(--swiper-text-color);
 }
 
 .home-text span {
     font-style: italic;
-    font-weight: 400;
-    font-size: 20px;
 }
 
-.home-text a {
-    color: var(--home-text-color);
-    text-decoration: none;
+.swiper-button-next,
+.swiper-button-prev {
+    color: #fff !important;
+}
+
+/* =============== Trending now ================ */
+
+.separator {
+    width: 100%;
+    height: 20px;
+    background-color: #ddd; /* Màu xám */
+    margin: 20px 0; /* Khoảng cách */
 }
