--- a/style.css
+++ b/style.css
@@ -271,20 +271,82 @@ body {
     font-weight: 500;
 }
 
-/* ================ Fan favorite =============== */
+/* ================ Fan title =============== */
 
-.favorite-wrapper {
+.title-wrapper {
     width: var(--max-width-website);
     margin: 35px auto;
 }
 
-.favorite-wrapper .fetured-recipe-collection {
+.title-wrapper .fetured-recipe-collection {
     width: 100%;
-    height: 450px;
+    height: 500px;
 }
 
-.favorite-wrapper .fetured-recipe-collection img {
+.title-wrapper .fetured-recipe-collection img {
     width: 100%;
-    height: 450px;
+    height: 500px;
     object-fit: cover;
+}
+
+.title-wrapper a {
+    text-decoration: none;
+}
+
+.title-wrapper .card-body {
+    padding-top: 70px;
+    padding-left: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.title-wrapper .card-body .card-subtitle {
+    font-size: 13px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.title-wrapper .card-body .card-title {
+    font-size: 50;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.title-wrapper .card-body .card-description {
+    font-size: 15px;
+    font-weight: 450;
+}
+
+/* ================== Fan favorites =================== */
+.fan-favorites-wrapper {
+    width: var(--max-width-website);
+    margin: 35px auto;
+}
+
+.fan-favorites-wrapper .card-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.fan-favorites-wrapper .card {
+    width: 18rem;
+    height: 18rem;
+}
+
+.fan-favorites-wrapper .card img {
+    height: 200px;
+    object-fit: cover;
+}
+
+.fan-favorites-wrapper .card-container a {
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+.fan-favorites-wrapper .card-text {
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 500;
 }
